@@ -3,39 +3,35 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
-
     <parent>
-        <groupId>One-Automations-QA</groupId>
-        <artifactId>One-Automations</artifactId>
+        <groupId>One-Automations-QA-Modules</groupId>
+        <artifactId>Modules</artifactId>
         <version>1.0</version>
     </parent>
-    <groupId>One-Automations-QA-Automations</groupId>
-    <artifactId>Automations</artifactId>
-    <version>1.0</version>
-    <modules>
-        <module>tests</module>
-        <module>environments</module>
-    </modules>
+
+    <artifactId>drivers</artifactId>
 
     <dependencies>
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-        </dependency>
-
+        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>One-Automations-Modules-Services</groupId>
-            <artifactId>services</artifactId>
-            <version>1.0</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>20</source>
+                    <target>20</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <properties>
         <maven.compiler.source>20</maven.compiler.source>
